cros: Hide context menu on entering tablet mode.

Otherwise users can select shelf settings that tablet mode does not
allow. Alternatively, we can keep the menu open and disable the
options, but I think this should suffice.

Test: manual
Bug: 814976
Change-Id: Id42a0c1ceef879d1227317ee0d27911b73df6c1b
Reviewed-on: https://chromium-review.googlesource.com/935627
Reviewed-by: James Cook <jamescook@chromium.org>
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539529}
Former-commit-id: 646e263a1f0c85da6c2dd769c89a51d352202dc2